# google_hashcode

./: .gitignore  LICENSE
2020/practice/wannes/: Makefile
2020/practice/wannes/lib/: Algorithm.h  Defines.h  FileHandler.h
2020/practice/wannes/src/: Algorithm.cpp  FileHandler.cpp  GoogleHash.cpp
2020/practice/wouter/: runit.sh
2020/practice/wouter/gh_practice_2020/: gh_practice_2020.pro  main.cpp  myalgo.cpp  myalgo.h
2020/qualification/: CMakeLists.txt  Makefile
2020/qualification/lib/: Algorithm.h  Defines.h  FileHandler.h  Library.h
2020/qualification/src/: Algorithm.cpp  FileHandler.cpp  GoogleHash.cpp  Library.cpp
